--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@vue/apollo-composable": "^4.0.0-beta.4",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "vue": "^3.2.45"
   },
   "devDependencies": {
